Adding more endpoints and organizing project